# Ry-dit

./: .git_commit_message.txt  .gitignore  .sync_drive.log.binaries  ACTUALIZACION_V0.10.4.md  ADVERTENCIAS.md  Analisis_conteo_final.md  Analisis_conteo_final.txt  CONTRIBUTING.md  Cargo.toml  DEUDAS_TECNICAS_V0.7.1.1.md  ESTADO_V0.11.5.md  ESTRUCTURA.md  EVALUACION_ESTATEGICA_V0.11.0.md  EVALUACION_GFX_ECS_SHIELD.md  GUIA_ROBOT.md  GUIA_USUARIO.md  GUIA_USUARIO_V0.11.6.md  GUIA_USUARIO_v0.2.0.md  GUÍA_FIX_RÁPIDO_V0.11.2.md  INFORME_RY3D_GFX.md  MIGUI_NUEVA_ESTRUCTURA.md  PLANIFICACION_V0.5.1_AUDIO_HTTP.md  QWEN.md  README.md  README_EN.md  README_PUBLIC_GITHUB.md  ROADMAP.md  SDL2_TTF_ASSETS_COMPLETADOS_V0.11.0.md  SDL2_TTF_FINAL_V0.11.0.md  SESION_V0.8.1_BEZIER.md  TASKS.md  TASKS_FISICS_BIOLOGIA_RADIATION.md  VISION_ESTRATEGICA_V0.11.6.md  analisis_qwen.md  bezier_completo.rydit  bezier_demo.rydit  demo_audio_player.rydit  demo_lazos.sh  demo_particles_editor.rydit  fix_lifetimes.py  (+11 more)
.drive_backup/crates/rydit-core/: Cargo.toml
.drive_backup/crates/rydit-ecs/: Cargo.toml
.drive_backup/crates/rydit-http/: Cargo.toml
.drive_backup/crates/rydit-loader/: Cargo.toml
.drive_backup/crates/rydit-science/: Cargo.toml
.drive_backup/crates/rydit-script/: Cargo.toml
.drive_backup/demos/modulo_ejemplo/: Cargo.toml
.drive_backup/docs/: BACKUP_SINCRONIZACION.md  GUIA_USUARIO_V0.5.1.md  HISTORICO_CRATES_IO_2026_03_26.md
.drive_backup/docs/backup_seguro_v0.8.0_post_fixes/: README.md
.drive_backup/docs/backup_seguro_v0.8.0_pre_benchmark_fmt_clippy/: README.md  ROADMAP.md
crates/events-ry/src/: lib.rs
crates/lizer/: Cargo.toml
crates/lizer/src/: lib.rs
crates/migui/: Cargo.toml  build.rs
crates/migui/src/: backend_sdl2.rs  font_native.rs  lib.rs
crates/postfx-ry/: Cargo.toml  README.md
crates/postfx-ry/src/: lib.rs
crates/postfx-ry/src/shaders/: bloom.fs.glsl  bloom.vs.glsl  blur.fs.glsl  chromatic.fs.glsl  color_grade.fs.glsl  sharpen.fs.glsl  vignette.fs.glsl
crates/ry-anim/src/: action_sprite.rs  effects.rs  illusions.rs  lib.rs
crates/ry-backend/: Cargo.toml
crates/ry-backend/src/: lib.rs  raylib_draw.rs  sdl2_core.rs
crates/ry-config/: Cargo.toml  README.md
crates/ry-core/: Cargo.toml  README.md
crates/ry-core/src/: assets.rs  lib.rs
crates/ry-gfx/: Cargo.toml
crates/ry-gfx/src/: fsr.rs  lib.rs  lighting.rs  sdl2_helpers.rs
crates/ry-god/: Cargo.toml
crates/ry-god/src/: audit.rs  bench.rs  console.rs  lib.rs  limits.rs  report.rs  ryprime.rs  sandbox.rs
crates/ry-god/src/tests/: crate_verify.rs  mod.rs  revelation.rs
crates/ry-input/: Cargo.toml  README.md
crates/ry-input/src/: lib.rs
crates/ry-lexer/src/: lexer.rs  token.rs
crates/ry-parser/src/: parser.rs
crates/ry-physics/src/: lib.rs
crates/ry-rs/: Cargo.toml
crates/ry-rs/src/: cli.rs  executor.rs  lib.rs  main.rs
crates/ry-science/: Cargo.toml
crates/ry-science/src/: genetics.rs  lib.rs  lsystem.rs
crates/ry-system-ry/: Cargo.toml
crates/ry-system-ry/src/: lib.rs
crates/ry-windows/: Cargo.toml  README.md
crates/ry-windows/src/: lib.rs
crates/ry3d-gfx/: Cargo.toml  README.md
crates/ry3d-gfx/src/: lib.rs
crates/rybot/: Cargo.toml
crates/rybot/src/: cli.rs  gui.rs  lib.rs  scene_tree.rs  subsystems.rs  templates.rs
crates/rydit-ecs/src/: components.rs  lib.rs
crates/rydit-gfx/examples/: demo_render_queue.rs
crates/rydit-gfx/src/: backend_sdl2.rs  camera.rs  ecs_render.rs  fsr.rs  gpu_instancing.rs  lib.rs  particles.rs  render_queue.rs  sdl2_ffi.rs
crates/rydit-lexer/: Cargo.toml  README.md
crates/rydit-lexer/src/: lexer.rs  lib.rs  token.rs
crates/rydit-parser/: Cargo.toml
crates/rydit-parser/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/rydit-rs/: Cargo.toml
crates/rydit-rs/src/: cli.rs  config.rs  config_parser.rs  executor.rs  lazos.rs  lib.rs  main.rs  module.rs  repl.rs
crates/rydit-system-ry/: Cargo.toml
crates/rydit-test/: Cargo.toml
crates/rydit-test/src/: lib.rs
crates/rydit-test/tests/: nivel1_core_test.rs  nivel2_integration_test.rs
crates/rydit-vm/: Cargo.toml
crates/rydit-vm/src/: compiler.rs  lib.rs  opcodes.rs  vm.rs
crates/toolkit-ry/: Cargo.toml
demos/: default.rydit-input  demo_genetica_radiacion.rydit  demo_ilusiones_opticas.rydit  demo_simple_desde_cero.rydit  demo_simple_v2.rydit
docs/: analisis_raylib_2d_3d.md  guia_compilacion_termux.md  informe_1ra_build.md  informe_sesion_v0.16.0_alpha.md  panorama_v0.13.0.md  plan_limpieza_v0.13.0.md  sesion_control_total_v0.13.0.md  sesion_v0.16.0_alpha_publicacion.md  vision_ry_anim.md
docs/actuales/: GUIA_USUARIO_V0.11.0.md  GUIA_USUARIO_V0.11.2.md  IMPLEMENTACION_NIVEL1.md  NIVEL1_MAS_NIVEL2_COMPLETADO.md  NIVEL3_LOWEND_COMPLETADO.md  PANORAMA_COMPLETO_BINARIOS.md  ROADMAP_ACTUALIZADO_V0.9.0.md  ROADMAP_V0.10.2.md  TOOLKIT_RY_PLAN.md  guia_parser.md  logro_parser_inf.md
docs/antiguos/: ESTADO_REAL_V0.10.4.md  ESTRUCTURA.md  LEVEL_MANAGER_V0.9.4.md  RELEASE_NOTES_V0.11.4.md  ROADMAP.md  clave_input_gfx_logica.txt
ejemplos-gfx/: CLASIFICACION.md
ejemplos-gfx/pendientes/: demo_10k_particulas.rs  demo_assets_simple.rs  demo_big_bang.rs  demo_complejo_100.rs  demo_input_map_standalone.rs  demo_input_sdl2.rs  demo_migui_sdl2.rs  demo_mouse_basico.rs  demo_platformer.rs  demo_simple_desde_cero.rs  ecs_demo_10k.rs  gpu_demo_100k.rs  gpu_demo_100k_debug.rs
ejemplos-gfx/pendientes-revision/: README.md  demo_movimiento.rs  demo_particulas_sdl2.rs  demo_sdl2_puro.rs  demo_toolkit_ry.rs
historial/: CHANGELOG_v0.2.0.md  CHANGELOG_v0.3.0.md  CHANGELOG_v0.4.0.md  EVALUACION_SONADORA.md  README_HISTORIAL.md
historial/diagnostico/: DIAGNOSTICO_SESION_26_v0.1.9.md
logo_icon_asst/: evaluarTexturas_sonidos.txt  rydit-sfx.jsx  rydit-sprites.jsx
scripts/: test_miri_tarpaulin.sh  test_x11.sh
tests_rydit/: test_01_hola_mundo.rydit  test_02_variables.rydit  test_03_condicionales.rydit  test_04_bucles.rydit  test_05_arrays.rydit  test_06_funciones.rydit  test_07_modulos.rydit  test_08_files_json.rydit  test_09_regex.rydit  test_10_colisiones.rydit
(+56 files in other folders)
