[package]
name = "ry-core"
version = "0.8.2"
edition = "2021"
description = "Core trait and module registry for Ry-Dit game engine"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
homepage = "https://github.com/lapumlbb18-blip/Ry-dit"
documentation = "https://docs.rs/ry-core"
readme = "README.md"
keywords = ["game-engine", "android", "rust", "gamedev", "termux"]
categories = ["game-development"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
