[package]
name = "ry-system-ry"
version = "0.14.0"
edition = "2021"
description = "Sistema Universal Ry - Integra ry-backend + migui"
authors = ["Shield Project"]

[dependencies]
ry-backend = { path = "../ry-backend" }
migui = { path = "../migui", features = ["sdl2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
