[package]
name = "ry3d-gfx"
version = "0.1.0"
edition = "2021"
description = "3D Graphics layer for Ry-Dit — Primitives, Camera3D, Models"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
keywords = ["3d", "graphics", "raylib", "game-engine", "ry-dit"]
categories = ["game-engines", "graphics"]

[dependencies]
ry-gfx = { path = "../ry-gfx" }
raylib = { version = "5.5.1", default-features = false, features = ["nobuild"] }

