[package]
name = "ry3d-gfx"
version = "0.1.0"
edition = "2021"
description = "3D graphics for Ry-Dit — Primitives, Camera3D, Models (GLTF/OBJ), Text 3D"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Ry-dit"
homepage = "https://github.com/lapumlbb18-blip/Ry-dit"
documentation = "https://docs.rs/ry3d-gfx"
readme = "README.md"
keywords = ["3d", "graphics", "raylib", "gltf", "game-engine"]
categories = ["game-development", "graphics", "rendering"]

[dependencies]
ry-gfx = { path = "../ry-gfx" }
raylib = { version = "5.5.1", default-features = false, features = ["nobuild"] }

