[package]
name = "rydit-parser"
version = "0.1.0"
edition = "2021"
description = "Parser with error recovery for RyDit Engine"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Rydit_Engine"
keywords = ["parser", "compiler", "rydit", "game-engine", "error-recovery"]
categories = ["compilers", "game-engines", "parsing"]

[dependencies]
rydit-lexer = { path = "../rydit-lexer", version = "0.1.0" }

[dev-dependencies]
# Tests no requieren dependencias adicionales

[lib]
path = "src/lib.rs"
