[package]
name = "rydit-test"
version = "0.11.1"
edition = "2021"
description = "Tests simplificados para RyDit - Rybot integration"
authors = ["RyDit Team"]
license = "MIT"

[dependencies]
# Crates internos (Núcleo)
rydit-core = { path = "../rydit-core" }
rydit-anim = { path = "../rydit-anim" }
rydit-physics = { path = "../rydit-physics" }
rydit-science = { path = "../rydit-science" }
lizer = { path = "../lizer" }
blast-core = { path = "../blast-core" }

# Testing
serde_json = "1.0"
