[package]
name = "rydit-vm"
version = "0.1.0"
edition = "2021"
description = "Bytecode VM for RyDit Engine"
license = "MIT"
repository = "https://github.com/lapumlbb18-blip/Rydit_Engine"
keywords = ["vm", "bytecode", "compiler", "rydit", "game-engine"]
categories = ["compilers", "game-engines", "virtual-machines"]

[dependencies]
rydit-parser = { path = "../rydit-parser", version = "0.1.0" }

[dev-dependencies]
# Tests no requieren dependencias adicionales

[lib]
path = "src/lib.rs"
